Fix overflow of left navigation menu search box.
Problem reported by and fix submitted by Lukas Diener.

--- a/frontend/php/css/internal/base.css
+++ b/frontend/php/css/internal/base.css
@@ -416,6 +416,11 @@ h5 a {
 	font-size: smaller;
 }
 
+.menusearch input[name=words] {
+	width: 100%;
+	box-sizing: border-box;
+}
+
 .relatedrecipes {
 	text-indent: 0;
 	list-style-type: none;
